--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,15 @@
     flex-direction: column;
 }
 
+.endText {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
 .top {
     height: 50%;
     position: relative;
