--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+/* Start App */
+
 .app {
     height: 100vh;
     display: flex;
@@ -5,42 +7,8 @@
     color: white;
 }
 
-.start {
-    width: 250px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-.startInput {
-    width: 100%;
-    height: 30px;
-    border: none;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.startInput:focus{
-    outline: none;
-}
-
-.startButton {
-    width: 100%;
-    height: 30px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 500;
+.pb-20 {
+    padding-bottom: 20px;
 }
 
 .main {
@@ -119,7 +87,38 @@
     font-weight: 300;
 }
 
-/* Trivia Component */
+/* Restart Game after End */
+.endGame {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
+    background-color: #020230;
+    padding: 50px;
+    border-radius: 25%;
+}
+
+.endGameText {
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.endEarned {
+    margin: 50px;
+}
+
+.endEarnedText {
+    font-size: 50px;
+    font-weight: 700;
+}
+
+
+/* End App */
+
+/* Start Trivia Component */
 
 .trivia {
     height: 100%;
@@ -205,3 +204,47 @@
         background: crimson;
     }
 }
+
+/* End Trivia */
+
+/* Start Start Component */
+
+.start {
+    width: 250px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.startInput {
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.startInput:focus{
+    outline: none;
+}
+
+.startButton {
+    width: 80%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+/* End Start */
